// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<svg
  className="feather feather-camera "
  fill="none"
  height={24}
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width={24}
>
  <g
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path d=\\"M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z\\"></path><circle cx=\\"12\\" cy=\\"13\\" r=\\"4\\"></circle>",
      }
    }
  />
</svg>
`;

exports[`renders custom colors 1`] = `
<svg
  className="feather feather-camera "
  color="#ff0000"
  fill="none"
  height={24}
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width={24}
>
  <g
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path d=\\"M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z\\"></path><circle cx=\\"12\\" cy=\\"13\\" r=\\"4\\"></circle>",
      }
    }
  />
</svg>
`;

exports[`renders custom sizes 1`] = `
<svg
  className="feather feather-camera "
  fill="none"
  height={100}
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width={100}
>
  <g
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path d=\\"M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z\\"></path><circle cx=\\"12\\" cy=\\"13\\" r=\\"4\\"></circle>",
      }
    }
  />
</svg>
`;
